added fetch function to get lessons from file

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         </div>
     </div>
-    <script src="Scripts/frontend.js"></script>
+    <script src="/Scripts/frontend.js"></script>
 </body>
 
 </html>
