Testing PUT Request

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </p>
                 <!-- Button is disabled if any fields are empty or don't match the RegEx -->
                 <button disabled v-if="emptyFields">Place Order</button>
-                <button @click="addOrderToBackend" @click="placeOrder" v-else>Place Order</button>
+                <button @click="placeOrder" v-else>Place Order</button>
             </div>
 
         </div>
